# gb

./: CMakeLists.txt  README.md  physfs.md  xmake.lua
.github/workflows/: cmake-multi-platform.yml  steamos.yml
src/: fleet.h  font.h  game.c  game.h  main.c  main.h  physfsrwops.c  player.h  script.c  script.h  ship.h  sound.c  sound.h  sound_openal.c  sound_sdl.c  video.c  video.h
